# zhi-li-transcribe

./: Cargo.toml
src/: audio.rs  main.rs
