[package]
name = "zhi-li-transcribe"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "5.5"

# Keep this for the actual work later
# whisper-rs = { version = "0.11", features = ["axum", "ffmpeg"] }