[package]
name = "zhu-li-transcribe"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version =  "0.8.6" , features = ["json", "multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6.1.0"
futures-util = "0.3"
whisper-rs = { version = "0.15.1", features = ["hipblas"] }
hf-hub = "0.4.3"
symphonia = { version = "0.5.5", features = ["all-formats", "mpa", "all-codecs", "all", "opt-simd"] }
hound = "3.5.1"
rubato = "0.16.2"
clap = { version = "4.5.49", features = ["derive"] }
